Update BDHandler.java